syntax = "proto3";
option go_package = ".;pbfiles";
message  ProdRequest {
    int32 prod_id =1;   //传入的商品ID
}
message ProdStockResponse{
    int32 prod_id=1;  //商品ID
    int32 prod_stock=2;//商品库存
}
